--- a/public/experimental/block.html
+++ b/public/experimental/block.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+
     <meta charset="UTF-8">
     <title>Block</title>
     <link rel="stylesheet" type="text/css" href="style/wf4nd.css"/>
@@ -9,76 +10,125 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/bluebird/1.2.2/bluebird.js"></script>
 
-    <script type="text/javascript" src="scripts/variables.js"></script>
+    <script type="text/javascript" src="scripts/util.js"></script>
+    <script type="text/javascript" src="scripts/expandable.js"></script>
+    <script type="text/javascript" src="scripts/value.js"></script>
+    <script type="text/javascript" src="scripts/valueList.js"></script>
+    <script type="text/javascript" src="scripts/variable.js"></script>
+    <script type="text/javascript" src="scripts/variableList.js"></script>
     <script type="text/javascript" src="scripts/activityPresenter.js"></script>
     <script type="text/javascript" src="scripts/workflowDesigner.js"></script>
+
 </head>
 
-<script type="text/html" id="wf4nd-variables-tmpl">
-    <div class="wf4nd-variables">
-        <h2>// Variables:</h2>
-        <ul data-bind="foreach: items">
-            <li>
-                <div class="wf4nd-edit wf4nd-var-name single-line" contenteditable="true" data-bind="text: name"></div>:
-                <div class="wf4nd-edit wf4nd-var-value single-line" contenteditable="true" data-bind="text: expression"></div>
-                <div class="wf4nd-var-btns">
-                    <div class="wf4nd-btn wf4nd-activities">
-                        <ul class="wf4nd-categories" data-bind="foreach: $root.categories">
-                            <li data-bind="css: { 'wf4nd-submenu': items.length !== 0 }"><span data-bind="text: name"></span>
-                            <ul class="wf4nd-items" data-bind="foreach: items">
-                                <li><span class="wf4nd-icon" data-bind="text: name, style: { backgroundImage: 'url(\'' + $data.icon + '\')' }"></span></li>
-                            </ul>
+<script type="text/html" id="wf-value-tmpl">
+    <div class="wf-value">
+        <div class="wf-exp-row"></div>
+        <span data-bind="visible: $rawData.name !== undefined">
+            <div class="wf-edit wf-var-name single-line" contenteditable="true"
+                 data-bind="text: name"></div>:
+        </span>
+        <span data-bind="visible: $rawData.name === undefined">
+            <div class="wf-var-name">
+                <span data-bind="text: $index"></span>:
+            </div>
+        </span>
+        <div class="wf-edit wf-var-value single-line" contenteditable="true"
+             data-bind="text: expression, visible: activity() === null"></div>
+        <div class="wf-btns">
+            <div class="wf-btn wf-activities"
+                 data-bind="click: function() { $parent.showCategories.call($parent, $data) }, event: { mouseover: onMouseOverCategoryMenu, mouseout: onMouseOutCategoryMenu }, css: { 'wf-op1': categoryMenuVisible() }">
+                <ul class="wf-categories"
+                    data-bind="foreach: $root.categories, css: { 'wf-show': categoryMenuVisible() }">
+                    <li data-bind="css: { 'wf-submenu': items.length !== 0 }"><span
+                            data-bind="text: name"></span>
+                        <ul class="wf-items" data-bind="foreach: items">
+                            <li data-bind="click: function() { $parentContext.$parent.setActivity.call($parentContext.$parent, $data) }"><span
+                                    class="wf-icon"
+                                    data-bind="text: name, style: { backgroundImage: 'url(\'' + $data.icon + '\')' }"></span>
                             </li>
                         </ul>
-                    </div>
-                    <div class="wf4nd-btn wf4nd-remove" data-bind="click: remove, visible: $parent.items().length > 1"></div>
-                </div>
-            </li>
-        </ul>
-        <div class="wf4nd-create-var" data-bind="click: createVariable">Create variable</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="wf-btn wf-remove"
+                 data-bind="click: remove, visible: $parent.items().length > 1"></div>
+        </div>
+        <div class="wf-war-activity" data-bind="visible: activity() !== null">
+            <div data-bind="template: { name: 'wf-activity-tmpl', data: activity, if: activity() !== null }"></div>
+        </div>
     </div>
 </script>
 
-<script type="text/html" id="wf4nd-activity-tmpl">
-    <div class="wf4nd-activity" data-bind="css: { closed: !isExpanded() }">
-        <div class="wf4nd-a-exp">
-            <div class="wf4nd-a-exp-btn" data-bind="click: expandClick"></div>
-            <div class="wf4nd-a-exp-line" data-bind="visible: isExpanded()"></div>
-            <div class="wf4nd-a-exp-lineend" data-bind="visible: isExpanded()"></div>
+<script type="text/html" id="wf-value-list-tmpl">
+    <div class="wf-expandable" data-bind="css: { 'wf-closed': !isExpanded() }">
+        <div class="wf-exp-control">
+            <div class="wf-exp-btn" data-bind="click: toggleExpand"></div>
+            <div class="wf-exp-line" data-bind="visible: isExpanded()"></div>
+            <div class="wf-exp-lineend" data-bind="visible: isExpanded()"></div>
         </div>
-        <div class="wf4nd-a-cnt">
-            <div class="wf4nd-head">
-                <div class="wf4nd-icon">
-                    <img src="style/images/block.png">
-                </div>
-                <div class="wf4nd-tag" data-bind="text: tagName"></div>
-                <div class="wf4nd-edit single-line" data-bind="{text: displayName, attr: { contenteditable: isExpanded() }}">
-                </div>
-                <div class="wf4nd-brace wf4nd-br-open">{<span class="wf4nd-br-closed-end">&nbsp;...&nbsp;}</span></div>
-            </div>
-            <div class="wf4nd-body" data-bind="visible: isExpanded()">
-                <div data-bind="template: { name: 'wf4nd-variables-tmpl', data: variables }">
+        <div class="wf-exp-cnt">
+            <div class="wf-value-list">
+                <h2>// <span data-bind="text: title"></span></h2>
+                <div class="wf-value-list-body">
+                    <ul data-bind="foreach: items">
+                        <li data-bind="template: { name: 'wf-value-tmpl' }"></li>
+                    </ul>
+                    <div class="wf-create-value" data-bind="click: createNew, text: createNewText"></div>
                 </div>
             </div>
-            <div class="wf4nd-closing" data-bind="visible: isExpanded()">
-                <div class="wf4nd-brace wf4nd-br-close">}</div>
+        </div>
+    </div>
+</script>
+
+<script type="text/html" id="wf-activity-tmpl">
+    <div class="wf-expandable wf-expandable-activity" data-bind="css: { 'wf-closed': !isExpanded() }">
+        <div class="wf-exp-control">
+            <div class="wf-exp-btn" data-bind="click: toggleExpand"></div>
+            <div class="wf-exp-line" data-bind="visible: isExpanded()"></div>
+            <div class="wf-exp-lineend" data-bind="visible: isExpanded()"></div>
+        </div>
+        <div class="wf-exp-cnt">
+            <div class="wf-activity">
+                <div class="wf-head">
+                    <div class="wf-icon">
+                        <img data-bind="attr: { src: icon }">
+                    </div>
+                    <div class="wf-tag" data-bind="text: tagName"></div>
+                    <div class="wf-edit single-line"
+                         data-bind="{text: displayName, attr: { contenteditable: isExpanded() }}">
+                    </div>
+                    <div class="wf-brace wf-br-open">{<span class="wf-br-closed-end">&nbsp;...&nbsp;}</span></div>
+                    <div class="wf-btns">
+                        <div class="wf-btn wf-remove" data-bind="visible: canRemove(), click: remove"></div>
+                    </div>
+                </div>
+                <div class="wf-activity-body">
+                    <div data-bind="template: { name: 'wf-value-list-tmpl', data: variables, if: variables() !== null }">
+                    </div>
+                    <div data-bind="template: { name: 'wf-value-list-tmpl', data: args, if: args() !== null }">
+                    </div>
+                </div>
+                <div class="wf-activity-closing">
+                    <div class="wf-brace wf-br-close">}</div>
+                </div>
             </div>
         </div>
     </div>
 </script>
 
 <script type="text/javascript">
-    $(function()
+    $(function ()
     {
         var designer = new WorkflowDesigner();
-        ko.applyBindings(designer, $(".wf4nd").get()[0]);
+        ko.applyBindings(designer, $(".wf").get()[0]);
     });
 </script>
 
 <body>
-    <div class="wf4nd">
-        <div class="wf4nd-code" data-bind="template: { name: 'wf4nd-activity-tmpl', data: rootActivity }">
-        </div>
+<div class="wf">
+    <div class="wf-code" data-bind="template: { name: 'wf-activity-tmpl', data: rootActivity }">
     </div>
+</div>
 </body>
 </html>
