--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Workflow 4 Node Designer - POC</title>
 </head>
 <body>
-    <div id="host"></div>
+    <div id="designer"></div>
     <script type="text/javascript" src="lib/require-2.1.14.js" data-main="main-index.js"></script>
 </body>
 </html>
